--- a/Personal Website/ex.html
+++ b/Personal Website/ex.html
@@ -1,1 +1,7 @@
 <!DOCTYPE html>
+<nav>
+    <a href="Prefectures in Japan.html">Prefectures in Japan</a> |
+    <a href="Bands I Like.html">Bands</a> ||
+</nav>
+
+<h1>Resume</h1>
