--- a/Personal Website/ex.html
+++ b/Personal Website/ex.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<nav>
-    <a href="Prefectures in Japan.html">Prefectures in Japan</a> |
-    <a href="Bands I Like.html">Bands</a> ||
-</nav>
+<div class="topnav">
+    <a class="active" href="#home">Home</a>
+    <a href="Experience.html">Prefectures in Japan</a> |
+  </div>
+
 
 <h1>Resume</h1>
