got css to work

--- a/Personal Website/ex.html
+++ b/Personal Website/ex.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<div class="topnav">
-    <a class="active" href="#home">Home</a>
-    <a href="Experience.html">Prefectures in Japan</a> |
-  </div>
+<html>
+    <link rel="stylesheet" href="style.css">
+    <div class="topnav">
+        <a class="active" href="ex.html">Home</a>
+        <a href="Experience.html">Experience</a> |
+        <a href="resume.html">Resume</a>
+    </div>
 
 
-<h1>Resume</h1>
+    <h1>Resume</h1>
+</html>
