--- a/Personal Website/resume.html
+++ b/Personal Website/resume.html
@@ -1,13 +1,12 @@
-
 <!DOCTYPE html>
 <html>
     <link rel="stylesheet" href="style.css">
     <div class="topnav">
         <a href="ex.html">Home</a>
-        <a class="active">Experience</a>
-        <a href="resume.html">Resume</a>
+        <a href="Experience.html">Experience</a>
+        <a class="active">Resume</a>
     </div>
-    <h1>Experience</h1>
+    <h1>Resume</h1>
 
 
 </html>
