put placeholders on what to write on homepage

--- a/Personal Website/ex.html
+++ b/Personal Website/ex.html
@@ -6,7 +6,14 @@
         <a href="Experience.html">Experience</a> |
         <a href="resume.html">Resume</a>
     </div>
+    <body>
 
 
-    <h1>Resume</h1>
+    </body>
+
+    <img src="placeholder.jpg" alt="Avatar" class="center">
+    <h1 style="text-align:center">Welcome to my website!</h1>
+    <h1>about me</h1>
+    <h1>age</h1>
+    <h1>location</h1>
 </html>
