Finished CSS design (basically)

--- a/Personal Website/ex.html
+++ b/Personal Website/ex.html
@@ -3,17 +3,22 @@
     <link rel="stylesheet" href="style.css">
     <div class="topnav">
         <a class="active" href="ex.html">Home</a>
+        <a href="about me.html">About Me</a>
         <a href="Experience.html">Experience</a> |
         <a href="resume.html">Resume</a>
+        <a href="contact.html">Contact Information</a>
     </div>
     <body>
+        <div id="container">
+            <div id="picture">
+                <img src="placeholder.jpg" alt="Avatar" class="center">
+            </div>
 
+            <img src="Page Break.png" class="center"></a>
 
+            <div class="Textstuff">
+                <h1 style="text-align:center">Welcome to my Website!</h1>
+            </div>
+        </div>
     </body>
-
-    <img src="placeholder.jpg" alt="Avatar" class="center">
-    <h1 style="text-align:center">Welcome to my website!</h1>
-    <h1>about me</h1>
-    <h1>age</h1>
-    <h1>location</h1>
 </html>
