--- a/Personal Website/about me.html
+++ b/Personal Website/about me.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
+
 <html>
     <link rel="stylesheet" href="style.css">
     <div class="topnav">
         <a href="ex.html">Home</a>
-        <a href="about me.html">About Me</a>
-        <a href="Experience.html">Experience</a>
-        <a class="active">Resume</a>
+        <a class="active" href="about me.html">About Me</a>
+        <a href="Experience.html">Experience</a> |
+        <a href="resume.html">Resume</a>
         <a href="contact.html">Contact Information</a>
     </div>
 
-
-    <h1>Resume</h1>
 
 
 </html>
