--- a/Personal Website/contact.html
+++ b/Personal Website/contact.html
@@ -1,15 +1,28 @@
-
 <!DOCTYPE html>
+
 <html>
     <link rel="stylesheet" href="style.css">
     <div class="topnav">
         <a href="ex.html">Home</a>
         <a href="about me.html">About Me</a>
-        <a class="active">Experience</a>
+        <a href="Experience.html">Experience</a> |
         <a href="resume.html">Resume</a>
-        <a href="contact.html">Contact Information</a>
+        <a  class="active" href="contact.html">Contact Information</a>
     </div>
-    <h1>Experience</h1>
+
+    <body>
+        <h1>Phone Number</h1>
+
+        <h1>E-mail</h1>
+
+
+        <h1>Github</h1>
+
+
+
+
+    </body>
+
 
 
 </html>
