--- a/Personal Website/Experience.html
+++ b/Personal Website/Experience.html
@@ -6,10 +6,38 @@
         <a href="ex.html">Home</a>
         <a href="about me.html">About Me</a>
         <a class="active">Experience</a>
-        <a href="resume.html">Resume</a>
+        <a  href="Education.html">Education</a>
+        <a href="resume.html">Resumé</a>
         <a href="contact.html">Contact Information</a>
     </div>
-    <h1>Experience</h1>
+
+
+
+    <body>
+        <div id="container">
+
+            <h1>Experience</h1>
+            <div class="Textstuff">
+            <h1>Hackathon Judge and Organizer</h1>
+
+
+
+            <h1>Programming Club President</h1>
+
+
+            <h1>Band Executive</h1>
+
+
+
+        
+            </div>
+            
+        </div>
+
+
+
+    </body>
+
 
 
 </html>
