--- a/Personal Website/ex.html
+++ b/Personal Website/ex.html
@@ -5,19 +5,28 @@
         <a class="active" href="ex.html">Home</a>
         <a href="about me.html">About Me</a>
         <a href="Experience.html">Experience</a> |
-        <a href="resume.html">Resume</a>
+        <a  href="Education.html">Education</a>
+        <a href="resume.html">Resumé</a>
         <a href="contact.html">Contact Information</a>
     </div>
     <body>
         <div id="container">
             <div id="picture">
-                <img src="placeholder.jpg" alt="Avatar" class="center">
+                <img id="stupid" src="html-5-logo-png-transparent.png">
+                <img id="stupid" src="python-5-logo-png-transparent.png" style="right: 50px">
+                <img id="circle" src="placeholder.jpg" alt="Avatar" class="center">
+                <img id="stupid" src="c-logo-png-transparent.png">
+                <img id="stupid" src="58480979cef1014c0b5e4901.png" style="right: 50px">
+
             </div>
-
-            <img src="Page Break.png" class="center"></a>
-
             <div class="Textstuff">
-                <h1 style="text-align:center">Welcome to my Website!</h1>
+                <h1 id="bigger"style="text-align: center">Daniel Suzuki</h1>
+                <h2 style="text-align: center" style="font-family: sans-serif;">Located in: Vancouver, British Columbia</h2>
+
+                <img src="Page Break.png" class="center"></a>
+
+        
+                <h1 style="text-align:center">Welcome to my Personal Website!</h1>
             </div>
         </div>
     </body>
