--- a/Personal Website/resume.html
+++ b/Personal Website/resume.html
@@ -5,12 +5,25 @@
         <a href="ex.html">Home</a>
         <a href="about me.html">About Me</a>
         <a href="Experience.html">Experience</a>
-        <a class="active">Resume</a>
+        <a  href="Education.html">Education</a>
+        <a class="active">Resumé</a>
         <a href="contact.html">Contact Information</a>
     </div>
+    <body>
+        <div id="container">
+            <h1>Resumé:</h1>
+            <img id="resume" src="Daniel Suzuki Resume.jpg_page-0001.jpg" class="center">
+
+            <div class="Textstuff">
+        
+            </div>
+            
+        </div>
 
 
-    <h1>Resume</h1>
+
+    </body>
+
 
 
 </html>
