--- a/Personal Website/Experience.html
+++ b/Personal Website/Experience.html
@@ -17,17 +17,21 @@
         <div id="container">
 
             <h1>Experience</h1>
+            <br><br>
             <div class="Textstuff">
-            <h1>Hackathon Judge and Organizer</h1>
+            <h2 style="padding-left: 10px;">Hackathon Judge and Organizer</h2>
+            <h3 style="padding-left: 20px;">vsHacks Hackathon</h3>
+            <h4 style="padding-left: 30px;">Assisted in operating and organizing hackathons of over 200+ participants over the course of three years</h4>
 
+            <br><br>
 
-
-            <h1>Programming Club President</h1>
-
-
-            <h1>Band Executive</h1>
-
-
+            <h2 style="padding-left: 10px;">Programming Club President</h2>
+            <h3 style="padding-left: 20px;">Killarney Programming Club</h3>
+            <h4 style="padding-left: 30px;"> Operated and guided a club of over 30 members, cultivating their interest in programming and computer science</h4>
+            <br><br>
+            <h2 style="padding-left: 10px;">Band Executive</h2>
+            <h3 style="padding-left: 20px;">Killarney Band Executive</h3>
+            <h4 style="padding-left: 30px;">Consulted with fellow Band Executives to decide policies and operations relating to Killarney’s concert band program </h4>
 
         
             </div>
