--- a/Personal Website/about me.html
+++ b/Personal Website/about me.html
@@ -14,12 +14,14 @@
         <div id="container">
             <img src="Me.jpg" class="center" style="padding-bottom: 10px;">
             <div id="paragraph">
-                <img src="Page Break.png" class="center" style="padding-top: 20px;"  style="padding-bottom:0px;">
-                <p  style="font-size: 30px;" style="font-family:'Courier New', Courier, monospace" style="padding-top: 0px;">My name is Daniel Suzuki, and I am a high school student in the 12th grade currently attending Killarney Secondary School in Vancouver. I have always had an interest in computers ever since I was a child, and currently plan on attending the University of Waterloo in Ontario for Computer Engineering. I am president of Killarney’s Programming Club, and was a judge and organizer for vsHacks, an online hackathon held in the Vancouver School District. My hobbies include learning Japanese, reading manga, playing video games, and, of course, coding. My favourite band is the Japanese band Fishmans.</p>
+                <img src="Page Break.png" class="center">
+                <p style="font-size: 30px;" style="font-family:'Courier New', Courier, monospace" style="padding-top: 0px;">My name is Daniel Suzuki, and I am a high school student in the 12th grade currently attending Killarney Secondary School in Vancouver. I have always had an interest in computers ever since I was a child, and currently plan on attending the University of Waterloo in Ontario for Computer Engineering.  My hobbies include learning Japanese, reading manga, playing video games, and, of course, coding. My favourite band is the Japanese band Fishmans.</p>
             </div>
 
             <div class="Textstuff">
             </div>
+            <img id="stupid" src="Fishmans.jpg" height="400px">
+            <img id="stupid" src="Bocchi.jpg" style="right: 50px" height="400px">
             
         </div>
 
