--- a/Personal Website/ex.html
+++ b/Personal Website/ex.html
@@ -14,7 +14,7 @@
             <div id="picture">
                 <img id="stupid" src="html-5-logo-png-transparent.png">
                 <img id="stupid" src="python-5-logo-png-transparent.png" style="right: 50px">
-                <img id="circle" src="placeholder.jpg" alt="Avatar" class="center">
+                <img src="website.png" alt="Avatar" class="center">
                 <img id="stupid" src="c-logo-png-transparent.png">
                 <img id="stupid" src="58480979cef1014c0b5e4901.png" style="right: 50px">
 
